# iocontrol

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  validated_config.yaml
examples/: basic_example.py  config_example.py
examples/configs/: industrial.yaml  saftey.yaml  simple.json  simple.yaml  virtual.json
src/iocontrol/: __init__.py  backends.py  config.py  core.py  types.py  validation.py
src/iocontrol/backends/: __init__.py  base.py  mcp23008.py  mcp23017.py  simulated.py
src/iocontrol/backends/common/: i2c.py
src/iocontrol/core/: manager.py  metrics.py
tests/: test_backends.py  test_core.py  test_mcp23008.py  test_validation.py
